log
vi., 18 de mar. de 2022 20:31:26: 
 list.c | 71 +++++++++++++++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 53 insertions(+), 18 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:10: error: 'lista' undeclared (first use in this function)
     if (!lista->head) return NULL;
          ^~~~~
list.c:43:10: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function 'nextList':
list.c:51:10: error: 'lista' undeclared (first use in this function)
     if (!lista->current || !lista->current->next ) return NULL;
          ^~~~~
list.c: In function 'lastList':
list.c:59:10: error: 'lista' undeclared (first use in this function)
     if (!lista->prev) return NULL;
          ^~~~~
list.c:61:16: error: 'List {aka struct List}' has no member named 'prev'
     return list->prev->data;
                ^~
list.c: In function 'pushFront':
list.c:80:23: error: 'listaNueva' undeclared (first use in this function)
     nodoNuevo->next = listaNueva->head;
                       ^~~~~~~~~~
list.c: At top level:
list.c:87:1: error: expected identifier or '(' before '}' token
 }
 ^
list.c: In function 'firstList':
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'lastList':
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
6f24c25
vi., 18 de mar. de 2022 20:33:05: 
 list.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:59:14: error: 'List {aka struct List}' has no member named 'prev'
     if (!list->prev) return NULL;
              ^~
list.c:60:25: error: 'List {aka struct List}' has no member named 'prev'
     list->current = list->prev;
                         ^~
list.c:61:16: error: 'List {aka struct List}' has no member named 'prev'
     return list->prev->data;
                ^~
list.c: In function 'pushFront':
list.c:80:23: error: 'listaNueva' undeclared (first use in this function)
     nodoNuevo->next = listaNueva->head;
                       ^~~~~~~~~~
list.c:80:23: note: each undeclared identifier is reported only once for each function it appears in
list.c: At top level:
list.c:87:1: error: expected identifier or '(' before '}' token
 }
 ^
list.c: In function 'lastList':
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5ab435b
vi., 18 de mar. de 2022 20:35:15: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:80:23: error: 'listaNueva' undeclared (first use in this function)
     nodoNuevo->next = listaNueva->head;
                       ^~~~~~~~~~
list.c:80:23: note: each undeclared identifier is reported only once for each function it appears in
list.c: At top level:
list.c:87:1: error: expected identifier or '(' before '}' token
 }
 ^
Compilation failed
487817b
vi., 18 de mar. de 2022 20:35:54: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c:87:1: error: expected identifier or '(' before '}' token
 }
 ^
Compilation failed
2177e71
vi., 18 de mar. de 2022 20:36:08: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
88b65ee
vi., 18 de mar. de 2022 21:41:48: 
 list.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:97:31: error: 'return' with a value, in function returning void [-Werror]
     if (!list->current)return NULL;
                               ^~~~
list.c:94:6: note: declared here
 void pushCurrent(List * list, void * data)
      ^~~~~~~~~~~
list.c:98:29: error: 'return' with a value, in function returning void [-Werror]
     if (!list->head) return NULL:
                             ^~~~
list.c:94:6: note: declared here
 void pushCurrent(List * list, void * data)
      ^~~~~~~~~~~
list.c:98:33: error: expected ';' before ':' token
     if (!list->head) return NULL:
                                 ^
list.c:96:12: error: unused variable 'nodo2' [-Werror=unused-variable]
     Node * nodo2 = createNode(data);
            ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
574f80d
vi., 18 de mar. de 2022 21:44:47: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:106:26: error: 'aux' undeclared (first use in this function)
             nodo2->next= aux;
                          ^~~
list.c:106:26: note: each undeclared identifier is reported only once for each function it appears in
list.c:97:12: error: variable 'x' set but not used [-Werror=unused-but-set-variable]
     Node * x = createNode(data);
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
c5c45f8
vi., 18 de mar. de 2022 21:45:05: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
c1908ac
vi., 18 de mar. de 2022 21:47:11: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  10|2
total_score: 45/70
d9983dd
vi., 18 de mar. de 2022 21:50:33: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
d808706
vi., 18 de mar. de 2022 21:57:03: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:113:31: error: 'nuevo' undeclared (first use in this function)
         list->current->next = nuevo;
                               ^~~~~
list.c:113:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4e97022
vi., 18 de mar. de 2022 21:57:28: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
e5de231
vi., 18 de mar. de 2022 21:58:35: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
38d372a
vi., 18 de mar. de 2022 22:02:22: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
21aca21
